--- a/app/src/main/res/layout/coin_transaction_single_item.xml
+++ b/app/src/main/res/layout/coin_transaction_single_item.xml
@@ -2,6 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_margin="4dp"
+    android:background="@drawable/rounder_corner_bg"
+    android:padding="4dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -23,22 +26,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Successfully sent to" />
+            android:text="Successfully Sent On" />
 
         <TextView
             android:id="@+id/receiver_phone_no_tv_txn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="4dp"
-            android:text="9911416637" />
+            android:layout_gravity="center" />
 
         <TextView
             android:id="@+id/time_tv_txn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="11:45 AM 22 aug 2018 " />
+            android:text="11:45 AM 22 aug 2018 "
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -56,7 +58,7 @@
         <ImageView
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:layout_margin="4dp"
+            android:layout_gravity="center"
             android:padding="4dp"
             android:src="@drawable/coin_img" />
 
@@ -64,9 +66,11 @@
             android:id="@+id/no_of_coins_txn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="3dp"
             android:padding="4dp"
-            android:text="200 Coins" />
+            android:text="200 Coins"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
