--- a/app/src/main/res/layout/activity_enter_pin.xml
+++ b/app/src/main/res/layout/activity_enter_pin.xml
@@ -49,14 +49,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="error"
-        android:textColor="#e12a19" />
+        android:textColor="#e12a19"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/submit_bt_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="12dp"
         android:text="submit" />
 </LinearLayout>
