UI changed and only allowing single clicks on buttons

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -46,6 +46,7 @@
         android:textColor="#e12016" />
 
     <Button
+        style="@style/buttonBlue"
         android:id="@+id/bt_change_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
