--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="buttonBlue">
+        <item name="android:background">@color/blue_fav</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog" />
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
