--- a/app/src/main/res/layout/activity_enter_pin.xml
+++ b/app/src/main/res/layout/activity_enter_pin.xml
@@ -7,15 +7,17 @@
     tools:context=".EnterPinActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
-        android:layout_margin="24dp"
+        android:layout_margin="18dp"
         android:contentDescription="pin password"
         android:padding="8dp"
         android:src="@drawable/pin_code" />
 
     <TextView
+        android:layout_gravity="center"
+        android:textSize="28sp"
         android:id="@+id/user_number_enter_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,8 +38,8 @@
             android:id="@+id/input_pin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_password"
             android:drawablePadding="4dp"
+            android:drawableLeft="@drawable/ic_password"
             android:drawableStart="@drawable/ic_password"
             android:hint="PIN"
             android:inputType="numberPassword" />
@@ -53,6 +55,7 @@
         android:visibility="gone" />
 
     <Button
+        style="@style/buttonBlue"
         android:id="@+id/submit_bt_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
