--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,26 +17,41 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:layout_margin="8dp"
+                android:layout_marginTop="22dp"
                 android:layout_weight="1"
                 android:contentDescription="phone"
                 android:padding="4dp"
                 android:src="@drawable/phone_hand_held" />
 
-
-            <EditText
-                android:id="@+id/input_phone_number"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
-                android:drawablePadding="8dp"
-                android:drawableStart="@drawable/ic_account_circle_black_24dp"
-                android:hint="@string/_10_digit_mobile_number"
-                android:inputType="phone"
-                android:padding="8dp" />
+                android:layout_gravity="center"
+                android:layout_marginTop="22dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
+                    android:drawablePadding="4dp"
+                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
+                    android:textColor="@android:color/black" />
+
+                <EditText
+                    android:id="@+id/input_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:hint="@string/_10_digit_mobile_number"
+                    android:inputType="phone"
+                    android:padding="8dp"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
 
 
             <TextView
@@ -51,10 +66,12 @@
 
             <Button
                 android:id="@+id/submit_button_main"
-                android:layout_width="match_parent"
+                style="@style/buttonBlue"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="login" />
+                android:layout_gravity="center"
+                android:layout_margin="12dp"
+                android:text="   login   " />
 
         </LinearLayout>
 
@@ -62,8 +79,8 @@
             android:id="@+id/progress_bar_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="18dp"
-            android:visibility="invisible" />
+            android:padding="80dp"
+            android:visibility="gone" />
 
     </FrameLayout>
 </android.support.v4.widget.NestedScrollView>
