--- a/app/src/main/res/layout/content_member.xml
+++ b/app/src/main/res/layout/content_member.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?android:attr/actionBarSize"
-    android:background="#d3d3d3"
+    android:background="#7de4ed"
     tools:context=".MemberActivity"
     tools:showIn="@layout/app_bar_member">
 
@@ -28,7 +28,7 @@
                 android:layout_height="48dp"
                 android:layout_gravity="left"
                 android:layout_margin="8dp"
-                android:src="@drawable/coin_img" />
+                android:src="@drawable/rupee" />
 
             <TextView
                 android:id="@+id/user_coin_tv"
@@ -39,6 +39,7 @@
                 android:drawablePadding="8dp"
                 android:text="250"
                 android:textAlignment="center"
+                android:textColor="@color/blue_fav"
                 android:textSize="24sp"
                 android:textStyle="bold" />
         </FrameLayout>
@@ -51,39 +52,48 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/rounder_corner_bg"
             android:padding="8dp"
-            android:text="Let's tranfer few coins"
+            android:text="Let's Recharge"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
-
-        <LinearLayout
-            android:id="@+id/formLinerLayout"
+        <android.support.v7.widget.CardView
+            android:id="@+id/crad_view_form"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="32dp"
-            android:background="#eecff2"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintTop_toBottomOf="@+id/transfer_coin_init"
             tools:layout_editor_absoluteX="8dp">
 
-            <ImageButton
-                android:id="@+id/cross"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="right"
-                android:layout_margin="8dp"
-                android:src="@drawable/ic_close_black_24dp" />
-
-            <FrameLayout
-                android:id="@+id/fragment_container"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/cross"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="right"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/ic_close_black_24dp" />
+
+                <FrameLayout
+                    android:id="@+id/fragment_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="4dp" />
+            </LinearLayout>
 
 
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
+
 
         <!--<View-->
         <!--android:layout_width="300dp"-->
