--- a/app/src/main/res/layout/fragment_receiver_phone.xml
+++ b/app/src/main/res/layout/fragment_receiver_phone.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ReceiverPhoneFragment">
+        tools:context=".Fragments.ReceiverPhoneFragment">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout3"
@@ -26,14 +26,13 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
+            style="@style/buttonBlue"
             android:id="@+id/proceed_bt"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
             android:gravity="bottom"
-            android:text="proceed"
-            android:textAlignment="center" />
+            android:text="proceed" />
     </LinearLayout>
 
     <ProgressBar
